@startuml

package "com.studentspace.sscore.academic_course" {
    class AcademicCourse {
        - id: Long
        - name: String
       <<Getter>>
       <<Setter>>
    }

    class AcademicCourseService {
        - entityManager: EntityManager
        + getAcademicCourseListByUserId(userId: Long): List<AcademicCourse>
    }

    class AcademicCourseController {
        - courseService: AcademicCourseService
        + getAcademicCourseListByUserId(userId: Long): List<AcademicCourse>
    }
}




AcademicCourseService --> AcademicCourse : uses
AcademicCourseController --> AcademicCourseService : uses
AcademicCourseController <-- AcademicCourse : returns

@enduml
